--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
